# grpc-example

./: README.md  docker-compose.yml
client/: Dockerfile  client.rb
client/lib/: calculator_pb.rb  calculator_services_pb.rb
protos/: calculator.proto
server/: Cargo.toml  Dockerfile  build.rs
server/src/: calculator.rs  main.rs
