[package]
name = "grpc-example"
version = "0.1.0"
authors = ["brunoarueira <contato@brunoarueira.com>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "*"
prost = "0.8"
tokio = { version = "1.20.4", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "*"

[[bin]]
  name = "server"
  path = "src/main.rs"
